pkg/lang/testdata/ub/config/invalid/state-backend-too-many-segments.ub
state: { @backend: a.b.c }
